minor grid misalignment fix in visuals

--- a/visual/css/styles.scss
+++ b/visual/css/styles.scss
@@ -111,7 +111,7 @@ header.band.first h3{
 .module h2{
 	color:white;
 	text-decoration: none;
-	margin-top: 1.25px;
+	margin-top: 2.5px;
 	opacity: 0.75;
 	width:300px;
 	height: 300px;
@@ -200,7 +200,7 @@ header.band.first h3{
 }
 
 .projectImage{
-	margin: 1.25px 0px 0px 2.5px;
+	margin: 2.5px 0px 0px 2.5px;
 	width: 300px;
 	opacity: 1;
 	height: 300px;
